--- a/project.Rmd
+++ b/project.Rmd
@@ -67,7 +67,8 @@ knitr::opts_chunk$set(error=TRUE,        # Keep compiling upon error
                       fig.align = "center",# set figure position
                       out.width = "75%", # set width of displayed images
                       warning=FALSE,     # do not show R warnings
-                      message=FALSE)     # do not show R messages
+                      message=FALSE,     # do not show R messages
+                      cache = TRUE)
 ```
 ```{r 1, echo=FALSE, message=FALSE, results='hide'}
 library(tidyverse)
