--- a/index.rmd
+++ b/index.rmd
@@ -13,7 +13,25 @@ I'm currently completing a MS in Data Science through UVA's part-time online pro
 
 Below I have listed my UVA MSDS coursework, personal projects, and additional independent learning. To view project write-ups and code please visit the included links. I'm most proud of my final project from the Data Mining class. Check it out if you have a few minutes!
 
+<br>
+
+## **Fall 2021** 
+
+### Bayesian Machine Learning (DS 6040)
+
+*Course Description:* Bayesian inferential methods provide a foundation for machine learning under conditions of uncertainty. Bayesian machine learning techniques can help us to more effectively address the limits to our understanding of world problems. This class covers the major related techniques, including Bayesian inference, conjugate prior probabilities, naive Bayes classifiers, expectation maximization, Markov chain monte carlo, and variational inference.
+
+<br>
+
+### Practice and Applications of Data Science (DS 6001)
+
+*Course Description:* This course covers data science practice, including communication, exploratory data analysis, and visualization. Also covered are the selection of algorithms to suit the problem to be solved, user needs, and data. Case studies will explore the impact of data science across different domains.
+
 <br> 
+
+### Data Science Capstone Project Work I (DS 6011)
+
+*Course Description:* This course is designed for capstone project teams to meet in groups, with advisors, and with clients to advance work on their projects.
 
 ## **Summer 2021**
 
