Update home page

--- a/index.rmd
+++ b/index.rmd
@@ -116,6 +116,8 @@ After completing this course, you will have developed valuable data science skil
 ## **Additional Learning**
 
 * [How Git Works](https://www.pluralsight.com/courses/how-git-works) 
+* Developing static websites with R Markdown files and Github Pages
+  * This website is created by this method and [www.bandybloomery.com](www.bandybloomery.com)
 
 <br>
 <br>
